# django-basic-shop-public

./: README.md  conftest.py  pyproject.toml  pytest.ini  reference.md  requirements.txt
docs/source/: apps.rst  conf.py  index.rst
docs/source/apps/products/: index.rst
src/shop/: .coverage  db.sqlite3
src/shop/api/: apps.py  permissions.py  urls.py
src/shop/api/serializers/: base_serializers.py  products.py  users.py
src/shop/api/views/: products.py  users.py
src/shop/apps/cart/: apps.py  cart.py  context_processors.py  urls.py  views.py
src/shop/apps/contact_details/: apps.py  forms.py
src/shop/apps/orders/: admin.py  apps.py  forms.py  urls.py  views.py
src/shop/apps/products/: admin.py  apps.py  context_processors.py  signals.py  urls.py  validators.py  views.py
src/shop/apps/search/: urls.py  views.py
src/shop/apps/shop_settings/: apps.py
src/shop/apps/users/: admin.py  apps.py  forms.py  managers.py  urls.py  views.py
src/shop/fixtures/: products_brand.json  products_brand_fixture.json  products_category.json  products_category_fixture.json  products_optiontype.json  products_optionvalue.json  products_product.json  products_product_brands.json  products_product_categories.json  products_product_option_types.json  products_productimage.json  products_productvariant.json  products_productvariant_option_values.json  products_supplier.json  products_tag.json
src/shop/shop/: constants.py  fields.py  routines.py  settings.py  signals.py  urls.py
src/shop/tests/: mixins.py  pytest_fixtures.py
trash/: archived.py  blank.py
(+91 files in other folders)
